--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     <div align="center">太&nbsp;&nbsp;&nbsp;好&nbsp;&nbsp;&nbsp;玩&nbsp;&nbsp;&nbsp;了</div>
 
 <hr><br><br>
+   <div>
     <h1>小王子</h1>
     <p>然後他又回到狐狸那裡。</p>
     <p>「再見了！」小王子說。</p>
     <p>「再見了！」狐狸說。</p>
-    <blockquote><strong>「我的秘密很簡單：唯有心才能看得清楚，眼睛是看不到真正重要的東西的。」</strong></blockquote>
+    <blockquote>「我的秘密很簡單：<strong>唯有心才能看得清楚，眼睛是看不到真正重要的東西的。」</strong></blockquote>
     <p>小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」</p>
+
+    </div>
 <br><br>
 
 <hr>
